error_capture.txt
**********************************************************************
** Visual Studio 2022 Developer Command Prompt v17.14.23
** Copyright (c) 2025 Microsoft Corporation
**********************************************************************
[vcvarsall.bat] Environment initialized for: 'x64'
   Compiling built v0.7.7
   Compiling vox-populi v0.1.0 (C:\Users\Owner\vox\crates\vox-populi)
   Compiling turso_core v0.4.4
error[E0308]: mismatched types
   --> crates\vox-populi\src\tensor\candle_qlora_train.rs:747:107
    |
747 | ...bels)) = crate::tensor::training_text::hf_tokenize_chatml_multiturn(tokenizer, &full_text, config.seq_len) {
    |             ---------------------------------------------------------- ^^^^^^^^^ expected `&Tokenizer`, found `Tokenizer`
    |             |
    |             arguments to this function are incorrect
    |
note: function defined here
   --> crates\vox-populi\src\tensor\training_text.rs:102:8
    |
102 | pub fn hf_tokenize_chatml_multiturn(
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
103 |     tokenizer: &tokenizers::Tokenizer,
    |     ---------------------------------
help: consider borrowing here
    |
747 |                 if let Ok((enc_ids, labels)) = crate::tensor::training_text::hf_tokenize_chatml_multiturn(&tokenizer, &full_text, config.seq_len) {
    |                                                                                                           +

error[E0308]: mismatched types
    --> crates\vox-populi\src\tensor\candle_qlora_train.rs:1044:111
     |
1044 | ...bels)) = crate::tensor::training_text::hf_tokenize_chatml_multiturn(tokenizer, &full_text, config.seq_len) {
     |             ---------------------------------------------------------- ^^^^^^^^^ expected `&Tokenizer`, found `Tokenizer`
     |             |
     |             arguments to this function are incorrect
     |
note: function defined here
    --> crates\vox-populi\src\tensor\training_text.rs:102:8
     |
 102 | pub fn hf_tokenize_chatml_multiturn(
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 103 |     tokenizer: &tokenizers::Tokenizer,
     |     ---------------------------------
help: consider borrowing here
     |
1044 |                     if let Ok((enc_ids, labels)) = crate::tensor::training_text::hf_tokenize_chatml_multiturn(&tokenizer, &full_text, config.seq_len) {
     |                                                                                                               +

warning: unused variable: `is_assistant`
   --> crates\vox-populi\src\tensor\training_text.rs:167:17
    |
167 |             let is_assistant = supervised_byte_ranges
    |                 ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_assistant`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `ids`
  --> crates\vox-populi\src\tensor\candle_qlora_train.rs:85:24
   |
85 | ...   if let Ok((ids, labels)) = crate::tensor::training_text::hf_tokenize_chatml_multiturn(tokenizer, &full_text, config.seq_len) {
   |                  ^^^ help: if this is intentional, prefix it with an underscore: `_ids`

For more information about this error, try `rustc --explain E0308`.
warning: `vox-populi` (lib) generated 2 warnings
error: could not compile `vox-populi` (lib) due to 2 previous errors; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
